--- a/device/device-msm8916-common/PKGBUILD
+++ b/device/device-msm8916-common/PKGBUILD
@@ -1,11 +1,12 @@
 _mode=cross
 pkgname=device-msm8916-common
 pkgver=0.1
-pkgrel=2
+pkgrel=3
 _arches=specific
 arch=(aarch64)
 license=(MIT)
 depends=(
+    linux-firmware
     linux-msm8916
     boot-lk2nd-msm8916-git
     boot-qhypstub-git
